--- a/index.html
+++ b/index.html
@@ -95,9 +95,36 @@
       </section>
 
 
-      <section class="problem-solution">
-        
+      <section class="solution-section">
+        <div class="solution-section-content">
+          <h2>Nossa Solução</h2>
+          <div class="section-text-content">
+            <ul>
+              <li>
+                <span> Baixa Visibilidade:</span>
+                A Fórmula E compete com a estabelecida Fórmula 1 e muitas vezes
+                é vista apenas como uma variação, limitando seu alcance e
+                popularidade.
+              </li>
+              <li>
+                <span>Engajamento Insuficiente:</span>
+                Há uma falta de engajamento, especialmente entre os jovens, que
+                poderiam se tornar novos fãs e defensores da tecnologia de
+                carros elétricos.
+              </li>
+              <li>
+                <span>Experiência de Evento Limitada:</span>
+                Nem todos têm a oportunidade de vivenciar uma corrida de Fórmula
+                E ao vivo devido a restrições geográficas ou financeiras.
+              </li>
+            </ul>
+            <img src="imgs/placeholder4.png" alt="" />
+          </div>
+        </div>
       </section>
+
+
+      
 
     </main>
   </body>
