--- a/index.html
+++ b/index.html
@@ -134,21 +134,34 @@
     <section class="gallery-section">
       <div class="gallery-section-content">
         <h2>Imagens</h2>
-        <div class="imgs-container">
+        <div class="imgs-container" id="imgs">
           <div class="imgs-container-row">
-            <img src="https://picsum.photos/300/200" alt="">
-            <img src="https://picsum.photos/300/200" alt="">
-            <img src="https://picsum.photos/300/200" alt="">
+            <img src="https://picsum.photos/300/200?random=1" alt="">
+            <img src="https://picsum.photos/300/200?random=2" alt="">
+            <img src="https://picsum.photos/300/200?random=3" alt="">
           </div>
           <div class="imgs-container-row">
-            <img src="https://picsum.photos/300/200" alt="">
-            <img src="https://picsum.photos/300/200" alt="">
-            <img src="https://picsum.photos/300/200" alt="">
+            <img src="https://picsum.photos/300/200?random=4" alt="">
+            <img src="https://picsum.photos/300/200?random=5" alt="">
+            <img src="https://picsum.photos/300/200?random=6" alt="">
           </div>
         </div>
       </div>
-
     </section>
+
+
+
+    <div class="slideshow" id="slideshow">
+      <div class="img-container">
+        <img src="" alt="">
+        <div class="input-group">
+          <button id="btn-back"><</button>
+          <button id="btn-next">></button>
+        </div>
+      </div>
+    </div>
+
+    
 
   </main>
 
@@ -160,5 +173,5 @@
     </div>
   </footer>
 </body>
-
+<script src="scripts/slider.js"></script>
 </html>
