--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <body>
   <header>
     <div class="header-content">
-      <a href="/">
+      <a href="./index.html">
         <img src="imgs/logoHeader.png" alt="Logo do Reblox" />
       </a>
       <nav>
         <ul>
           <li>
-            <a href="">Home</a>
+            <a href="#problema">Problema</a>
           </li>
           <li>
-            <a href="">Ideia</a>
+            <a href="#solucao">Ideia</a>
           </li>
           <li>
-            <a href="">Galeria</a>
+            <a href="#galeria">Galeria</a>
           </li>
           <li>
-            <a class="btn" href="">Login</a>
+            <a class="btn" href="./pages/login.html">Login</a>
           </li>
         </ul>
       </nav>
@@ -39,11 +39,10 @@
       <div class="banner-section-content">
         <img src="imgs/logoBanner.png" alt="Logo do banner" class="banner-logo" />
         <h3>Visite a Formula e de maneira interativa</h3>
-        <button>Botão</button>
       </div>
     </section>
 
-    <section class="whatis-section">
+    <section class="whatis-section" id="problema">
       <div class="whatis-section-content">
         <img src="imgs/placeholder2.png" alt="" />
         <div class="section-text-content">
@@ -89,7 +88,7 @@
     </section>
 
 
-    <section class="solution-section">
+    <section class="solution-section" id="solucao">
       <div class="solution-section-content">
         <h2>Nossa Solução</h2>
         <div class="section-text-content">
@@ -112,38 +111,38 @@
               E ao vivo devido a restrições geográficas ou financeiras.
             </li>
           </ul>
-          <img src="imgs/placeholder4.png" alt="" />
+          <img src="imgs/rebloxsolucao.png" alt="" />
         </div>
       </div>
     </section>
 
     <section class="whatis-section">
       <div class="whatis-section-content">
-        <img src="imgs/placeholder5.png" alt="" />
+        <img src="imgs/teste.png" alt="" />
         <div class="section-text-content">
           <h3 class="section-title">Pronto para testar?</h3>
           <p>
             Junte-se a nós e ajude a popularizar a Fórmula E! Experimente nosso quiz agora e descubra como é estar em
             uma corrida através do Roblox!
           </p>
-          <button>Acessar</button>
+          <a class="btn" href="https://www.roblox.com/games/17412031045/reblox">Acessar</a>
         </div>
       </div>
     </section>
 
-    <section class="gallery-section">
+    <section class="gallery-section" id="galeria">
       <div class="gallery-section-content">
         <h2>Imagens</h2>
         <div class="imgs-container" id="imgs">
           <div class="imgs-container-row">
-            <img src="https://picsum.photos/300/200?random=1" alt="">
-            <img src="https://picsum.photos/300/200?random=2" alt="">
-            <img src="https://picsum.photos/300/200?random=3" alt="">
+            <img src="./imgs/banco.png" alt="">
+            <img src="./imgs/museu.png" alt="">
+            <img src="./imgs/pitstops.png" alt="">
           </div>
           <div class="imgs-container-row">
-            <img src="https://picsum.photos/300/200?random=4" alt="">
-            <img src="https://picsum.photos/300/200?random=5" alt="">
-            <img src="https://picsum.photos/300/200?random=6" alt="">
+            <img src="./imgs/podio.png" alt="">
+            <img src="./imgs/rebloxsolucao.png" alt="">
+            <img src="./imgs/teste.png" alt="">
           </div>
         </div>
       </div>
